src/test/deca/codegen/valid/objet_print.deca

class A {
    int x;
}

{
    A a = new A();
    a.x = 1;
    println(a.x);
}
