src/test/deca/codegen/invalid/null_read.deca

class A { 
    int x; 
}

{
    A a;
    a = null;
    println(a.x);
    
}
